--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">JR7校正治具操作流程動畫<br><small style="font-size: 18px; color: #666;">JR7校正治具操作フロー動画</small></h1>
+        <h1 class="title">JR7校正治具操作流程動畫 V4.0<br><small style="font-size: 18px; color: #666;">JR7校正治具操作フロー動画 V4.0</small></h1>
         
         <div class="controls">
             <h4>🎮 演示設定<br><small style="font-size: 12px; color: #666;">デモ設定</small></h4>
